# python-markdown-selfhash

./: .gitignore  LICENSE  README.md  mkdselfhash.py  pyproject.toml  setup.py  shell.nix
test/: test_selfhash.py
