[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "mkdselfhash"
version = "0.0.6"
authors = [
	{ name="Maverick Peppers" },
]
description = "Simple in-place embedded hash linking for mkdocs."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
	"Programming Language :: Python :: 3",
	"Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/TheMaverickProgrammer/python-markdown-mkdselfhash"
Issues = "https://github.com/TheMaverickProgrammer/python-markdown-mkdselfhash"
